--- a/index.html
+++ b/index.html
@@ -518,5 +518,9 @@
          event.target.classList.add('active');
        }
      </script>
+	  
+	<div style="margin-top: 30px;"></div>
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=EC3Q9--0wPJiiA7RCFMMZ5gKiaDhuyKKBJQcUsdNqDc"></script>
+	  
    </body>
  </html>
